Fixes: Rules entity
