# docs/swagger.json
@@ -1730,8 +1730,14 @@
                 "project_id": {
                     "type": "integer"
                 },
+                "project_name": {
+                    "type": "string"
+                },
                 "table_id": {
                     "type": "integer"
+                },
+                "table_name": {
+                    "type": "string"
                 },
                 "type": {
                     "type": "string"
@@ -1767,7 +1773,7 @@
                     "type": "string"
                 },
                 "chain": {
-                    "$ref": "#/definitions/dto.CreateChainDTO"
+                    "type": "string"
                 },
                 "network_object_rules": {
                     "type": "array",
